random quote generator layout

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
             </div>
 
             <div class="col-md-4 buttons">
-                <a href="#" class="btn btn-info" target="_blank" id="tweetMe" role="button"> <i class="fa fa-twitter"></i> &nbsp; Tweet Me</a>
+                <a href="#" class="btn btn-info" target="_blank" id="tweetMe" role="button">
+                    <i class="fa fa-twitter"></i> &nbsp; Tweet Me</a>
 
-                <a href="#" class="btn btn-info" id="newQuote" role="button"> <i class="fa fa-quote-left"></i> &nbsp;New Quote</a>
+                <a href="#" class="btn btn-info" id="newQuote" role="button">
+                    <i class="fa fa-quote-left"></i> &nbsp;New Quote</a>
             </div>
 
             <div class="col-md-12 creator">by
