minor changes in  index file and added styling

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <div class="col-md-12 title">
                 <h1>Random Quote Generator</h1>
             </div>
-            <div class="col-md-8 quoteArea">
+            <div class="col-md-12 quoteArea">
                 <p id="randomQuote"></p>
             </div>
 
-            <div class="col-md-4 buttons">
+            <div class="col-md-12 buttons text-center">
                 <a href="#" class="btn btn-info" target="_blank" id="tweetMe" role="button">
                     <i class="fa fa-twitter"></i> &nbsp; Tweet Me</a>
 
@@ -46,7 +46,7 @@
                     <i class="fa fa-quote-left"></i> &nbsp;New Quote</a>
             </div>
 
-            <div class="col-md-12 creator">by
+            <div class="col-md-12 creator">Made with <i class="fa fa-heart"> </i> &nbsp; by
                 <a href="https://codepen.io/nabinjaiswal/" target="_blank">nabinjaiswal</a>
             </div>
         </div>
